--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Metagra iBoostme Theme
-Theme URI: http://preview.iboostme.com/metagra/;
-Author: iBoostme (Asshurim)
+Theme Name: OxOil Trading Theme
+Theme URI: http://preview.iboostme.com/oxoil/wordpress/;
+Author: iBoostme (JuniBrosas)
 Author URI: http://iboostme.com/
 Description: iBoostme delivers comprehensive web services ranging from custom website design to development of complex enterprise web applications. We base our offerings on an understanding of clients’ business requirements and providing dependable solutions. We combine business domain knowledge with technology competence and proven methodologies to deliver high quality results in a cost-effective manner to maximize your competitive advantage and productivity. We work double to satisfy the needs of our clients and to meet their expectations. Moreover, we work extra just be able to serve our clients more than what they deserve. We deliberately manifest light year – generating services to provide you unique, superb and feasible products that you are worthy of having.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: custom-design, cjnetsolutions, asshurim, cjnet, wordpress-corporate, iboostme
-Text Domain:  iBoostme Metagra Project
+Text Domain:  iBoostme OxOil Project
 */
 
 html, body {
