--- a/style.css
+++ b/style.css
@@ -186,13 +186,13 @@ header #logo .logo-tag {
 
 /*Regulators*/
 .emp { font-style: italic; font-weight: bold; font-family: 'Open Sans', sans-serif;}
-.btn-blue{ border-radius: 0; border-color: #202181; background-color: #333491; font-weight: bold; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.54); font-family: 'Open Sans', sans-serif; }
+.btn-blue{ border-radius: 0; border-color: #202181; background-color: #333491;  text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.54); font-family: 'Open Sans', sans-serif; }
 .btn-blue:hover { background-color: #3839a3; border-color: #202181; }
 .btn-lg { font-size: 14px; }
 
 /*Wells*/
 .well { padding: 30px; border-radius: 0; background-color: #1f1f1f; border:none; color: #fff; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3);}
-.well .title { font-size: 16px; font-weight: bold;  margin: 0 0 30px 0;  }
+.well .title { font-size: 16px; font-weight: 600;  margin: 0 0 30px 0;  }
 .well a { color: #4041c4; text-decoration: none; }
 .well .recent { margin-bottom: 60px; }
 .well .recent li { margin-bottom: 20px; }
@@ -204,10 +204,16 @@ header #logo .logo-tag {
 .well-products-sidebar { margin-top: 412px; }
 .well-main { line-height: 1.8; font-size: 13px; }
 
-.post-nav li { padding: 5px  15px;  transition: all .3s; }
-.post-nav li:hover a { color: white; }
-.post-nav li a { font-weight: bold; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3); transition: all .3s;}
-.post-nav li:hover { background-color: #4c4c4c; color: white !important; cursor: pointer }
+.post-nav li { padding: 2px  15px;  transition: all .3s; }
+
+.post-nav li a { padding-left: 30px; font-size: 16px; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3); transition: all .3s;}
+.post-nav li:hover a, .post-nav .active a { color: white; }
+.post-nav li:hover, .post-nav .active { background-color: #4c4c4c; color: white !important; cursor: pointer }
+.post-nav-container{
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 0;
+}
 
 .ticker { position: relative;  bottom: 25px; font-weight: bold; padding: 0 100px;  color: white; width: 90%;  margin: 0 auto; }
 .ticker .stat { margin-left: 10px; color: #289328; font-weight: bold; }
@@ -248,7 +254,7 @@ footer .links li>a{
 }
 
 footer .bottom{
-    padding: 20px 0;
+    padding: 0 0 20px 0;
     color: #535353;
     font-weight: 300;
     background-color: #000000;
