--- a/style.css
+++ b/style.css
@@ -206,10 +206,10 @@ header #logo .logo-tag {
 
 .preview-product{  border: 2px solid #4d5052;  }
 
-.news-title { font-size: 65px; color: #df271f; font-weight: 700; }
+.news-title { font-size: 60px !important; color: #df271f; font-weight: 700; text-shadow: none; }
 .news-date { color: #b1b9bc; }
-.news-item-title { font-size: 16px; }
-.news-item { padding: 0 0 20px 0; border-bottom: 1px dashed #fff; margin: 0 0 30px; }
+.news-item-title { font-size: 16px; color: #e7e7e7; }
+.news-item { padding: 0 0 20px 0; border-bottom: 1px dashed #6e7679; margin: 0 0 25px; }
 
 
 
