--- a/style.css
+++ b/style.css
@@ -206,6 +206,14 @@ header #logo .logo-tag {
 
 .preview-product{  border: 2px solid #4d5052;  }
 
+.commodity-table { width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    background-color: #fff;
+    color: #3f322c;
+    text-shadow: none;
+    font-size: 12px; }
+
 .news-title { font-size: 60px !important; color: #df271f; font-weight: 700 !important; text-shadow: none; }
 .news-date { color: #b1b9bc; }
 .news-item-title { font-size: 16px; color: #e7e7e7; }
