--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ header #logo .logo-tag {
 .sexy-form .btn { border-radius: 0; border-left: 3px solid #06076a; }
 
 .certificate { position: relative; top: 3px; left: 2px; }
-.read-more-btn { font-size: 12px; color: white; }
+.read-more-btn { font-size: 12px; color: white !important; }
 
 .main-section.with-bg { background: url('images/banner-clean.jpg') no-repeat top center; min-height: 500px; }
 .main-section.with-bg .container { padding-top: 50px; }
