--- a/style.css
+++ b/style.css
@@ -243,9 +243,8 @@ header #logo .logo-tag {
 .certificate { position: relative; top: 3px; left: 2px; }
 .read-more-btn { font-size: 12px; color: white !important; }
 
-.main-section.with-bg { background: url('images/banner-clean.jpg') no-repeat top center; min-height: 500px; }
+.main-section.with-bg { background: url('images/banner-clean.jpg') no-repeat top center; min-height: 500px; background-size: contain; }
 .main-section.with-bg .container { padding-top: 50px; }
-
 
 
 /*Owl Carousel*/
