--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header #logo .logo-tag {
 }
 
 /*Regulators*/
-.link { color: white; }
+.link { color: white !important; }
 .emp { font-style: italic; font-weight: bold; font-family: 'Open Sans', sans-serif;}
 .btn-blue{ border-radius: 0; border-color: #202181; background-color: #333491;  text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.54); font-family: 'Open Sans', sans-serif; }
 .btn-blue:hover { background-color: #3839a3; border-color: #202181; }
