Added Page Test.

--- a/style.css
+++ b/style.css
@@ -453,3 +453,20 @@ footer .list-items li a i { margin-right: 5px; }
     display: none !important;
 }
 
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
+    .well.well-products.well-main { height: 200px; }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) {
+
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) {
+    .well.well-products.well-main { height: 783px; }
+}
