Added Page Test.

--- a/style.css
+++ b/style.css
@@ -457,16 +457,16 @@ footer .list-items li a i { margin-right: 5px; }
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) {
+@media (min-width: 768px) {
     .well.well-products.well-main { height: 200px; }
 }
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) {
+@media (min-width:992px) {
 
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
+@media (min-width: 1200px) {
     .well.well-products.well-main { height: 783px; }
 }
