--- a/style.css
+++ b/style.css
@@ -457,18 +457,18 @@ footer .list-items li a i { margin-right: 5px; }
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
     .well.well-products.well-main { height: 560px; }
     .well-products-sidebar { margin-top: 0;  }
 }
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width:992px) {
+@media (max-width:992px) {
     .well.well-products.well-main { height: 560px; }
     .well-products-sidebar { margin-top: 0;  }
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .well.well-products.well-main { height: 783px; }
 }
