--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ header #logo .logo-tag {
 
 /*Wells*/
 .well { padding: 30px; border-radius: 0; background-color: #1f1f1f; border:none; color: #fff; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3);}
-.well .title { font-size: 16px; font-weight: 600;  margin: 0 0 30px 0;  }
+.well .title { font-size: 16px; font-weight: 600;  margin: 20px 0 30px 0;  }
 .well a { color: #4041c4; text-decoration: none; }
 .well .recent { margin-bottom: 60px; }
 .well .recent li { margin-bottom: 20px; }
@@ -459,18 +459,19 @@ footer .list-items li a i { margin-right: 5px; }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     .well.well-products.well-main { height: 560px; }
-    .well .title {  margin: 20px 0 30px 0; }
+
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width:992px) {
     .well.well-products.well-main { height: 560px; }
-
+    .well-products-sidebar { margin-top: 412px;  }
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
     .well.well-products.well-main { height: 783px; }
     .well-products-sidebar { margin-top: 412px;  }
+    .well .title {  margin: 0 0 30px 0; }
 }
 .well.well-products.well-main { height: 783px; }
