--- a/style.css
+++ b/style.css
@@ -475,3 +475,4 @@ footer .list-items li a i { margin-right: 5px; }
     .well .title {  margin: 0 0 30px 0; }
 }
 .well.well-products.well-main { height: 783px; }
+..navbar-collapse.in { overflow-y: visible; }
