--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ footer .list-items li a i { margin-right: 5px; }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width:992px) {
-    .well.well-products.well-main { height: 560px; }
+    .well.well-products.well-main { min-height: 560px; }
     .well-products-sidebar { margin-top: 412px;  }
 }
 
@@ -474,5 +474,5 @@ footer .list-items li a i { margin-right: 5px; }
     .well-products-sidebar { margin-top: 412px;  }
     .well .title {  margin: 0 0 30px 0; }
 }
-.well.well-products.well-main { height: 783px; }
+.well.well-products.well-main { min-height: 783px; }
 ..navbar-collapse.in { overflow-y: visible; }
