Added Page Test.

--- a/style.css
+++ b/style.css
@@ -469,11 +469,9 @@ footer .list-items li a i { margin-right: 5px; }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-    .well.well-products.well-main { height: 783px; }
     .well-products-sidebar { margin-top: 412px;  }
     .well .title {  margin: 0 0 30px 0; }
 }
 
-/*.well.well-products.well-main { min-height: 783px; }*/
-.well.well-products.well-main { height: 560px; }
+.well.well-products.well-main { min-height: 783px; }
 .navbar-collapse.in { overflow-y: visible; }
