--- a/style.css
+++ b/style.css
@@ -226,6 +226,22 @@ header #logo .logo-tag {
 .wprss-time-ago { color: #b1b9bc; }
 .nav-links a { color: #e7e7e7 !important; }
 
+.short-feeds .nav-links { display: none; }
+.short-feeds .wprss-feed-meta { display: none; }
+.short-feeds .rss-aggregator .feed-item {
+    padding: 0 0 10px 0;
+    margin: 0 0 10px;
+}
+.short-feeds .wprss-time-ago { font-size: 12px; }
+.short-feeds .well-products-sidebar .title {
+    margin: 0 0 10px 0;
+}
+.short-feeds .rss-aggregator a {
+    font-size: 13px;
+    color: #e7e7e7;
+}
+.short-feeds .rss-aggregator { margin-bottom: 30px; }
+
 .post-nav li { padding: 2px  15px;  transition: all .3s; }
 .post-nav li a { padding-left: 30px; font-size: 16px; text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3); transition: all .3s;}
 .post-nav li:hover a, .post-nav .active a { color: white; }
