Added Page Test.

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h2.no-background, h2.single-line {
     font-size: 26px;
 }
 .small-border {
-    border-bottom: 5px dashed #716E6E;
+    border-bottom: 5px dashed #A0A0A0;
     margin: 16px auto;
     width: 70px;
 }
