--- a/style.css
+++ b/style.css
@@ -278,6 +278,36 @@ header #logo .logo-tag {
 .main-section.with-bg { background: url('images/banner-clean.jpg') no-repeat top center; min-height: 500px; background-size: contain; }
 .main-section.with-bg .container { padding-top: 50px; }
 
+/*ScrollBar*/
+.scrollbar {
+    margin-left: 30px;
+    float: left;
+    height: 300px;
+    width: 65px;
+    background: #F5F5F5;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+}
+
+.scrollbar  #style-1::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.scrollbar  #style-1::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.scrollbar #style-1::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
 
 /*Owl Carousel*/
 #owl-carousel .item{  margin: 3px 5px;  }
