--- a/style.css
+++ b/style.css
@@ -280,29 +280,25 @@ header #logo .logo-tag {
 
 /*ScrollBar*/
 .scrollbar {
-    margin-left: 30px;
-    float: left;
-    height: 300px;
-    width: 65px;
-    background: #F5F5F5;
+    height: 388px;
+    background: transparent;
     overflow-y: scroll;
-    margin-bottom: 25px;
 }
 
-.scrollbar  #style-1::-webkit-scrollbar-track
+.scrollbar#style-1::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
     background-color: #F5F5F5;
 }
 
-.scrollbar  #style-1::-webkit-scrollbar
+.scrollbar#style-1::-webkit-scrollbar
 {
     width: 12px;
     background-color: #F5F5F5;
 }
 
-.scrollbar #style-1::-webkit-scrollbar-thumb
+.scrollbar#style-1::-webkit-scrollbar-thumb
 {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
