--- a/style.css
+++ b/style.css
@@ -288,21 +288,19 @@ header #logo .logo-tag {
 .scrollbar#style-1::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-    background-color: #F5F5F5;
+    background-color: #663A3A;
 }
 
 .scrollbar#style-1::-webkit-scrollbar
 {
     width: 12px;
-    background-color: #F5F5F5;
+    background-color: #2F2121;
 }
 
 .scrollbar#style-1::-webkit-scrollbar-thumb
 {
-    border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+    background-color: #1D2A5F;
 }
 
 /*Owl Carousel*/
