--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ header #logo .logo-tag {
 .post-nav-container{
     margin-left: -15px;
     margin-right: -15px;
-    padding-left: 0;
+    /*padding-left: 0;*/
 }
 
 .ticker { position: relative;  bottom: 25px; font-weight: bold; padding: 0 100px;  color: white; width: 90%;  margin: 0 auto; }
