--- a/style.css
+++ b/style.css
@@ -167,8 +167,10 @@ header #logo .logo-img {
 header #logo .logo-tag {
     padding: 22px 25px 25px 25px;
 }
-.header-slogan { color: white; background-color: rgba(31,31,31,0.8); }
-
+.header-slogan { color: white; background-color: rgba(31,31,31,0.2); }
+.header-slogan h1 { font-weight: 100; }
+.header-with-border { font-weight: bold; border-top: 5px solid #2c276d; font-size: 20px; }
+.header-normal { font-size: 24px; }
 /*Navigation Bar*/
 .navbar-nav {
     display: inline-block;
