--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ b{
 
 /*Sections*/
 section{
-    color: #444444;
+    color: #fff;
+    margin:50px 0;
 }
 /*
 section img, .featured-list figure{
@@ -168,7 +169,7 @@ header #logo .logo-tag {
     padding: 22px 25px 25px 25px;
 }
 .header-slogan { color: white; background-color: rgba(31,31,31,0.2); }
-.header-slogan h1 { font-weight: 100; }
+.header-slogan h1 { font-weight: 100; padding: 10px 20px; }
 .header-with-border { font-weight: bold; border-top: 5px solid #2c276d; font-size: 20px; }
 .header-normal { font-size: 24px; }
 /*Navigation Bar*/
@@ -279,6 +280,7 @@ header #logo .logo-tag {
 .certificate { position: relative; top: 3px; left: 2px; }
 .read-more-btn { font-size: 12px; color: white !important; }
 
+.main-section
 .main-section.with-bg { background: url('images/banner-clean.jpg') no-repeat top center; min-height: 500px; background-size: contain; }
 .main-section.with-bg .container { padding-top: 50px; }
 
