Added Page Test.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ b{
 /*Sections*/
 section{
     color: #fff;
-    margin:50px 0;
+    /*margin:50px 0;*/
 }
 /*
 section img, .featured-list figure{
