--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ header #logo .logo-tag {
     margin-top: 0; }
 .header-normal { margin-bottom: 20px; font-size: 24px; }
 /*Navigation Bar*/
-.navbar-nav {
+.navbar-nav {=
     display: inline-block;
     float: none;
     border-bottom-left-radius: 5px;
